--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-lightbulb fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Product Solution</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">We provide tailored solutions that are designed and built with an eye to the future in order to generate ongoing values to our clients.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-ad fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Branding & Marketing</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Not only we can help to promote your products or services and shape your brand, but also help to grow your business strategically.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-shipping-fast fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Imports & Distribution</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">From importing food products to household supplies, we source all over the world and strive to bring the best products to Macau.</p>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Menga</div>
-                                <div class="portfolio-caption-subheading text-muted">World's first metal tumbling tower</div>
+                                <div class="portfolio-caption-subheading text-muted">World's first mini metal tumbling tower</div>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Renova</div>
-                                <div class="portfolio-caption-subheading text-muted">Highend tissue and toilet paper</div>
+                                <div class="portfolio-caption-subheading text-muted">Premium tissue and toilet paper</div>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                                 <h4>2010-2017</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -199,7 +199,7 @@
                                 <h4>Jan 2017</h4>
                                 <h4 class="subheading">Our Company is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui</p></div>
                         </div>
                     </li>
                     <li>
@@ -209,7 +209,7 @@
                                 <h4>Sep 2017</h4>
                                 <h4 class="subheading">Macoin Debut</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -219,7 +219,7 @@
                                 <h4>Feb 2019 </h4>
                                 <h4 class="subheading">Collabs and expansions</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> Our team is a tight-knit, talented group with a shared vision of delivering consistently great results for our clients, as well as ensuring the company is a fun yet challenging place to work.</p></div>
                 </div>
             </div>
         </section>
@@ -398,9 +398,9 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Menga</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">World's first mini metal Tumbling Tower</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>We have all played the traditional wood tumbling tower. It's fun, it is good for parties, and probably most of us have a set at home. We like the traditional one as much as you do, but we also wanted a portable one yet maintaining the full-size playability, that's how the idea of Menga was born. A miniature full weight cooper tumbling tower. You can slip a set of Menga in you pocket without noticing...well, let's be frank, you will definitely notice every ounce of it, but it is truly pocketable. You can bring it with you and play with anyone, anywhere, anytime!</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Explore</li>
@@ -428,7 +428,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Sticable</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">Stickers we all need</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
                                     <p>Why STICABLE™? Sometimes we really need to unplug, but it is difficult to do when we don't know which is the right plug.</p>
                                     <p>STICABLE™ has a wide range of applications. You should of course put them on your plugs, but why stop there? You can also label your drawer, yes, THAT drawer filled with chargers cables and stuff you just refuse to throw away because "they may come in handy one day". You can also put the stickers on the sockets, on the wall, basically anywhere you want.</p>
@@ -490,10 +490,10 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Renova</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">The Sexiest Paper On Earth</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae <!-- cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
+                                    <p>Renova is an European brand of high quality and innovative products. Available in more than 60 countries worldwide, it offers colourful designs and new functional solutions through stylish and environmentally happy products. In the beginning of the millennium, Renova launched the first range of paper products certified with the European Union Ecolabel. Renovagreen are products manufactured with 100% recycled paper, emphasizing a solid strategy regarding the environment. More recently, the brand launched a range of products with paper packaging, biodegradable and recyclable, replacing plastic, in response to a growing expectation of citizens around the world.</p>
+<!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Southwest</li>
                                         <li>Category: Website Design</li>
