--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shipping-fast fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Imports & Distribution</h4>
-                        <p class="text-muted">From importing food products to household supplies, we source all over the world and strive to bring the best products to Macau.</p>
+                        <h4 class="my-3">Import & Distribution</h4>
+                        <p class="text-muted">From importing food products to household supplies, we source from all over the world and bring the best products to Macau.</p>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                                 <h4>2010-2017</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Completed their Master’s degree in University of Nevada, Las Vegas, Kelvin and Lam have worked in the hospitality industry for 7 years in the field of hotel operations, planning and development.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -199,7 +199,7 @@
                                 <h4>Jan 2017</h4>
                                 <h4 class="subheading">Our Company is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui</p></div>
+                            <div class="timeline-body"><p class="text-muted">Given the background and knowledge we have, when it comes to establishing own business, we had our eyes on the tourism and hospitality industry. The name Redirect reflects our company mission: to provide products or services that are often overlooked by the market.</p></div>
                         </div>
                     </li>
                     <li>
@@ -209,7 +209,7 @@
                                 <h4>Sep 2017</h4>
                                 <h4 class="subheading">Macoin Debut</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Macoin is city-wide a coin press machine network. Coin press machine has been a popular tourism product, yet it is absent from one of the World's most visited destinations - Macau. The project was launched in 2017 and was funded by the cultural industry fund.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -217,9 +217,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Feb 2019 </h4>
-                                <h4 class="subheading">Collabs and expansions</h4>
+                                <h4 class="subheading">Collabs and Expansions</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui!</p></div>
+                            <div class="timeline-body"><p class="text-muted">After Macoin is well-established, we started to explore other business opportunities. We've partnered up with renowned brands to bring their products to Macau. We also provided worked creative solutions to the Macau Government as well as Macau Science Center to enrich their customer experiences.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -430,6 +430,7 @@
                                     <h2 class="text-uppercase">Sticable</h2>
                                     <p class="item-intro text-muted">Stickers we all need</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full2.jpg" alt="" />
                                     <p>Why STICABLE™? Sometimes we really need to unplug, but it is difficult to do when we don't know which is the right plug.</p>
                                     <p>STICABLE™ has a wide range of applications. You should of course put them on your plugs, but why stop there? You can also label your drawer, yes, THAT drawer filled with chargers cables and stuff you just refuse to throw away because "they may come in handy one day". You can also put the stickers on the sockets, on the wall, basically anywhere you want.</p>
                                     <p>We started with creating a set of icons that is universal yet recognizable. The goal is that my 80 year-old-computer-illiterate grandma can look at them and tell me what they are about. They began with tech-related items, such as monitor, router, charger etc., but soon we realized the cable problem exists beyond the tech-savvy crowd, so the icons were expanded to general electronic appliances, such as TV, fridge, and washing machine. At the end we developed over 60 icons, which should most items you can find in a common household.</p>
@@ -520,9 +521,9 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">STEM Toys</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <p class="item-intro text-muted">Let kids learn while they play</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>an assemly kit with only 7 parts including a small vibrating motor which is generally embedded in cellphones powered by  "AA" alkaline batteries. This simple and well-designed kit with a few parts to assemble and no need of soldering is not only a lot of fun for all ages but also a perfect educational kit for students from low-grade and up. We source STEM toys are assemly kits that provide children with learning about making things, electronics, programming, etc., with fun. Nowadays, although children are surrounded by various devices, such as portable game players, smart phones, tablets, PCs, etc., how these devices work is more difficult to imagine than before. Highly-developed technology and downsized parts obscured the mechanism and the principle of such devices so that users have less chance to develop the skill to become a "maker". An American professor forecasts that after 20 years from now half of the jobs we have now will become things of the past. Menial labors are handled by computers and robots, therefore we human being will have to spare a deep thought for what need to be done by humans. In the future, the ability that the society requires for human being is to create highly creative jobs that utilize computers and robots. By assembling STEM toys, children can go through an experience of making radios and robots by combining electronic parts, gears, etc. by their own hands, which will trigger their interest in how things around them work. It is our hope that children grow up with a big dream and ambition and will be able to develop something that are creative, interesting, and that of good service to the society when they are grown up.</p>
+                                    <p>Combining playtime with education is a fun way for kids to learn. So what better way to do that than with STEM toys? Help your kids stay relevant in a tech-savvy world by giving them fun STEM toys to increase their engagement in science, technology, engineering and math. Our collection is packed with dozens of fascinating and fun products that focus on one or more of these subject areas. These hands-on games are perfect for kids of all ages and are a surefire entertaining way to encourage exploring and problem solving.</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Window</li>
