--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 <h4>Sep 2017</h4>
                                 <h4 class="subheading">Macoin Debut</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Macoin is city-wide a coin press machine network. Coin press machine has been a popular tourism product, yet it is absent from one of the World's most visited destinations - Macau. The project was launched in 2017 and was funded by the cultural industry fund.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Macoin is a city-wide coin press machine network. Coin press machine has been a popular tourism product, yet it is absent from one of the World's most visited destinations - Macau. The project was launched in 2017 and was funded by the cultural industry fund.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -285,16 +285,44 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/macaubusiness.jpg" alt="" /></a>
+                        <a href="https://www.fic.gov.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/01.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/cif.png" alt="" /></a>
+                        <a href="https://www.macaotourism.gov.mo/en/" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/02.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/MGTO.png" alt="" /></a>
+                        <a href="https://www.pata.org" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/03.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/PATA.png" alt="" /></a>
+                        <a href="https://www.macautower.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/04b.png" alt="" /></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.ajhackett.com/macau/" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/05.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.broadwaymacau.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/06.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.venetianmacao.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/07.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.parisianmacao.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/08.png" alt="" /></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.studiocity-macau.com/en" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/09.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="http://www.msc.org.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/10.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://laikei-icecream.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/11.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="http://www.taileiloi.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/12.png" alt="" /></a>
                     </div>
                 </div>
             </div>
@@ -365,7 +393,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Macoin</h2>
-                                    <p class="item-intro text-muted">A city-wide a coin press machine network</p>
+                                    <p class="item-intro text-muted">A city-wide coin press machine network</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
                                     <p>Backed by the Macau SAR Government, our coin press machine – MACOIN, has become one of the largest souvenir vending networks in Macau. Since 2018 close to 150,000 coins has been made. The project also has been featured on Macau Daily, Macau Daily Times, Macau Business and various other media </p>
                                     <p>Coin-pressed machine has been a popular tourism product around the world, yet for the longest time it is not available in the SAR. In respond to that, Redirect Limited, a local SME, decided to introduce the concept to the city in 2017. Funded by the government’s Cultural Industry Fund, the project was recognized as a Cultural and Creative program. The same year MACOIN made its first appearance in PATA Travel Mart, hosted by MGTO. The unique experience has proven to be popular among guests.</p>
