fix clients section

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <h4>Feb 2019 </h4>
                                 <h4 class="subheading">Collabs and Expansions</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">After Macoin is well-established, we started to explore other business opportunities. We've partnered up with renowned brands to bring their products to Macau. We also provided worked creative solutions to the Macau Government as well as Macau Science Center to enrich their customer experiences.</p></div>
+                            <div class="timeline-body"><p class="text-muted">After Macoin is well-established, we started to explore other business opportunities. We've partnered up with renowned brands to bring their products to Macau. We've also provided creative solutions to the Macau Government Tourism Office as well as Macau Science Center to enrich their customer experiences.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -285,44 +285,44 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.fic.gov.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/01.png" alt="" /></a>
+                        <a href="https://www.fic.gov.mo" target="_blank"><img class="img-fluid d-block mx-auto"src="assets/img/logos/01.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.macaotourism.gov.mo/en/" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/02.png" alt="" /></a>
+                        <a href="https://www.macaotourism.gov.mo/en/" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/02.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.pata.org" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/03.png" alt="" /></a>
+                        <a href="https://www.pata.org" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/03.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.macautower.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/04b.png" alt="" /></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.ajhackett.com/macau/" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/05.png" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.broadwaymacau.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/06.png" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.venetianmacao.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/07.png" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.parisianmacao.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/08.png" alt="" /></a>
+                        <a href="https://www.macautower.com.mo" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/04b.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://www.studiocity-macau.com/en" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/09.png" alt="" /></a>
+                        <a href="https://www.ajhackett.com/macau/" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/05.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="http://www.msc.org.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/10.png" alt="" /></a>
+                        <a href="https://www.broadwaymacau.com.mo" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/06.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="https://laikei-icecream.com" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/11.png" alt="" /></a>
+                        <a href="https://www.venetianmacao.com" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/07.png" alt="" /></a>
                     </div>
                     <div class="col-md-3 col-sm-6 my-3">
-                        <a href="http://www.taileiloi.com.mo" target="_blank><img class="img-fluid d-block mx-auto" src="assets/img/logos/12.png" alt="" /></a>
+                        <a href="https://www.parisianmacao.com" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/08.png" alt="" /></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://www.studiocity-macau.com/en" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/09.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="http://www.msc.org.mo" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/10.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="https://laikei-icecream.com" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/11.png" alt="" /></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 my-3">
+                        <a href="http://www.taileiloi.com.mo" target="_blank"><img class="img-fluid d-block mx-auto" src="assets/img/logos/12.png" alt="" /></a>
                     </div>
                 </div>
             </div>
