--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Founded in 2017, Redirect is a Macau based hospitality company. Our goal is to provide our customers with products & services of superior quality and value. </div>
+                <div class="masthead-subheading">Founded in 2017, Redirect is a Macau-based hospitality company. Our goal is to provide our customers with products & services of superior quality and value. </div>
                 <div class="masthead-heading text-uppercase"> </div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Our Services</a>
             </div>
@@ -58,7 +58,7 @@
                             <i class="fas fa-lightbulb fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Product Solution</h4>
-                        <p class="text-muted">We provide tailored solutions that are designed and built with an eye to the future in order to generate ongoing values to our clients.</p>
+                        <p class="text-muted">Tailored solutions that are designed and built with an eye to the future in order to generate ongoing values to our clients.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -66,7 +66,7 @@
                             <i class="fas fa-ad fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Branding & Marketing</h4>
-                        <p class="text-muted">Not only we can help to promote your products or services and shape your brand, but also help to grow your business strategically.</p>
+                        <p class="text-muted">Not only can we promote your products and services, we are here to grow your business strategically by creating a unique brand image.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -74,7 +74,7 @@
                             <i class="fas fa-shipping-fast fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Import & Distribution</h4>
-                        <p class="text-muted">From importing food products to household supplies, we source from all over the world and bring the best products to Macau.</p>
+                        <p class="text-muted">With a strong local connection, we are the perfect one-stop-shop to importing international product to the exciting market of Macau.</p>
                     </div>
                 </div>
             </div>
@@ -187,9 +187,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2010-2017</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4 class="subheading">Prologues</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Completed their Master’s degree in University of Nevada, Las Vegas, Kelvin and Lam have worked in the hospitality industry for 7 years in the field of hotel operations, planning and development.</p></div>
+                            <div class="timeline-body"><p class="text-muted">After finishing their Master’s degree in University of Nevada, Las Vegas, Kelvin and Lam have worked in the hospitality industry for 7 years, with the focus of hotel operations, planning and development.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -197,9 +197,9 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Jan 2017</h4>
-                                <h4 class="subheading">Our Company is Born</h4>
+                                <h4 class="subheading">Beginning</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Given the background and knowledge we have, when it comes to establishing own business, we had our eyes on the tourism and hospitality industry. The name Redirect reflects our company mission: to provide products or services that are often overlooked by the market.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Given the background and knowledge, the duo set their eyes on the tourism and hospitality industry when it comes to establishing their own business. The name Redirect reflects the company mission: to provide products or services that are often overlooked by the market.</p></div>
                         </div>
                     </li>
                     <li>
@@ -209,7 +209,7 @@
                                 <h4>Sep 2017</h4>
                                 <h4 class="subheading">Macoin Debut</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Macoin is a city-wide coin press machine network. Coin press machine has been a popular tourism product, yet it is absent from one of the World's most visited destinations - Macau. The project was launched in 2017 and was funded by the cultural industry fund.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Coin press machine has been a popular tourism product, yet it is absent from one of the World's most visited destinations - Macau. Noticing this, Redirect made it their first project. In mere 4 months, the project was launched, and it caught the eye of the Macau government, thus and was funded by the cultural industry fund.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -219,7 +219,7 @@
                                 <h4>Feb 2019 </h4>
                                 <h4 class="subheading">Collabs and Expansions</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">After Macoin is well-established, we started to explore other business opportunities. We've partnered up with renowned brands to bring their products to Macau. We've also provided creative solutions to the Macau Government Tourism Office as well as Macau Science Center to enrich their customer experiences.</p></div>
+                            <div class="timeline-body"><p class="text-muted">After the success of Macoin, the company started to explore other business opportunities, partnered up with renowned brands to bring their products to Macau. Their extended client list includes Sands China, Galaxy Macau, Studio City, Macau Tower, Macau Government Tourism Office, as well as Macau Science Center.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -332,9 +332,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">We will get back to you as soon as we can.</h3>
+                    <h5 class="text-white font-weight-light">info@redirectlimited.com</h5>
+                    <h5 class="text-white font-weight-light">+853 6343 8505</h5>
+                    <h6 class="text-white font-weight-light">Avenida Da Praia Grande No. 429 Centro Comercial Praia Grande 20E, Macau SAR</h6>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -361,7 +363,7 @@
                         <div id="success"></div>
                         <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
                     </div>
-                </form>
+                </form> -->
             </div>
         </section>
         <!-- Footer-->
@@ -375,8 +377,8 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/redirect-limited"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
-                        <a class="mr-3" href="#!">Privacy Policy</a>
-                        <a href="#!">Terms of Use</a>
+                        <a class="mr-3" href="mailto:info@redirectlimited.com">Contact Us</a>
+                        <!-- <a href="#!">Terms of Use</a> -->
                     </div>
                 </div>
             </div>
@@ -428,7 +430,7 @@
                                     <h2 class="text-uppercase">Menga</h2>
                                     <p class="item-intro text-muted">World's first mini metal Tumbling Tower</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
-                                    <p>We have all played the traditional wood tumbling tower. It's fun, it is good for parties, and probably most of us have a set at home. We like the traditional one as much as you do, but we also wanted a portable one yet maintaining the full-size playability, that's how the idea of Menga was born. A miniature full weight cooper tumbling tower. You can slip a set of Menga in you pocket without noticing...well, let's be frank, you will definitely notice every ounce of it, but it is truly pocketable. You can bring it with you and play with anyone, anywhere, anytime!</p>
+                                    <p>The tumbling tower is just the perfect party game. . We like it as much as the next guy, but after a few decades of the same 3-inch wood, maybe it’s time to breathe some fresh air to the game. Introducing: Menga – A miniature full-weight cooper tumbling tower. Ultra portable, yet infinitely playable. Made using nickle-plated cooper, the blocks feels extra nice in hands, both in terms of weight and texture. . The whole tower is just a little under 4 inches, you can literally slip a set of in your pocket and carry it around. The smaller size also means increase difficulty, perfect for the veteran of the game. Contact us now if you are interested in one.</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Explore</li>
@@ -459,9 +461,9 @@
                                     <p class="item-intro text-muted">Stickers we all need</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full2.jpg" alt="" />
-                                    <p>Why STICABLE™? Sometimes we really need to unplug, but it is difficult to do when we don't know which is the right plug.</p>
-                                    <p>STICABLE™ has a wide range of applications. You should of course put them on your plugs, but why stop there? You can also label your drawer, yes, THAT drawer filled with chargers cables and stuff you just refuse to throw away because "they may come in handy one day". You can also put the stickers on the sockets, on the wall, basically anywhere you want.</p>
-                                    <p>We started with creating a set of icons that is universal yet recognizable. The goal is that my 80 year-old-computer-illiterate grandma can look at them and tell me what they are about. They began with tech-related items, such as monitor, router, charger etc., but soon we realized the cable problem exists beyond the tech-savvy crowd, so the icons were expanded to general electronic appliances, such as TV, fridge, and washing machine. At the end we developed over 60 icons, which should most items you can find in a common household.</p>
+                                    <p>Sometimes we really need to unplug, and we mean it literally. But it is difficult to do when we don't know which is the right plug. It is not fun when you need to spend 5 minutes trying to trace the bulk of cables and plugs and find the one that connects to the TV. </p>
+                                    <p>STICABLE™ is the solusion. Simply put the corresponding stickers on your plugs and you are all set, but why stop there? You can also label your drawer, yes, THAT drawer filled with chargers cables and stuff you just refuse to throw away because "they may come in handy one day". How about sockets? On the wall? Stick it wherever you see fit!</p>
+                                    <p>The icons of STICABLE™  are universal and recognizable. The goal is that my 80 year-old-computer-illiterate grandma can look at them and tell me what they are about. We developed over 60 icons, which covers tech-related items such as monitor, router, charger, etc.; there are also general electronic appliances, such as TV, fridge, and washing machine.  Get stickable today to truly enjoy the hassle-free unplug experience!</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Finish</li>
@@ -491,7 +493,8 @@
                                     <h2 class="text-uppercase">Oloiya</h2>
                                     <p class="item-intro text-muted">”Here I Come, here I come.”</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
-                                    <p>We are the exclusive distributor of OLOIYA – the largest dried meat manufacturer in Malaysia. Their main products include dried meat and meat floss. Corporate clients will be glad to learn their rich experience in custom package design.</p>
+                                    <p>When it comes to Macau souvenior, dry meat will most certainly make the top 3 list. While the traditional flavors such as “black pepper”, “fruit juice”, and “spicy” are still very popular, there are companies dare to ask the question: what if we make dry meat, but go CRAZY about it? How would happen if we put salted egg flavor into the meat? That’s exactly what OLOIYA, the largest dried meat manufacturer in Malaysia did.Their dried meat and meat floss are of the best quality you can find in the market, and their different flavors are truly unique on the market.</p> 
+                                    <p>We are honor to be their sole distributor in Hong Kong and Macau. Corporate clients will also be glad to learn their rich experience in custom package design.</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Lines</li>
@@ -551,7 +554,7 @@
                                     <h2 class="text-uppercase">STEM Toys</h2>
                                     <p class="item-intro text-muted">Let kids learn while they play</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>Combining playtime with education is a fun way for kids to learn. So what better way to do that than with STEM toys? Help your kids stay relevant in a tech-savvy world by giving them fun STEM toys to increase their engagement in science, technology, engineering and math. Our collection is packed with dozens of fascinating and fun products that focus on one or more of these subject areas. These hands-on games are perfect for kids of all ages and are a surefire entertaining way to encourage exploring and problem solving.</p>
+                                    <p>Combining playtime with education is a fun way for kids to learn. So what better way to do that than with STEM toys? Help your kids stay relevant in a tech-savvy world by giving them fun STEM toys, that increases their engagement in science, technology, engineering and math. Our collection is packed with dozens of fascinating and fun products that focus on one or more of these subject areas. These hands-on games are perfect for kids of all ages, and are a surefire entertaining way to encourage exploration and problem solving.</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Window</li>
