--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
                             <h4>Kelvin U</h4>
                             <p class="text-muted">Co-Founder & Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kelvin-u-909b17b9/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
@@ -259,7 +259,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
                             <h4>Lam Lei</h4>
                             <p class="text-muted">Co-Founder & Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/lamlei/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
@@ -269,8 +269,8 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
                             <h4>Christy Chen</h4>
                             <p class="text-muted">Finance Manager</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
+                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+ -->                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © Redirect Limited 2021</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a> -->
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/redirect-limited"><i class="fab fa-linkedin-in"></i></a>
                     </div>
