--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                            <h4>Christy Chen</h4>
+                            <h4>JoJo Wong</h4>
                             <p class="text-muted">Finance Manager</p>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
  -->                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
